# Trading_Bot

./: .gitignore  Makefile  README.md  my_BTC_USDT_trade_history.csv  postCreate.sh  pyproject.toml  python  start.sh
.github/codespaces/backup/: extensions.txt  settings.json
Archive/Trading_BOT/: test.py
Archive/Trading_BOT/Bot/: short_postion_10x.json
Trading_BOT/: .gitignore  README.md  history_exporter.py  main.py  pyproject.toml
Trading_BOT/Bot/: auto_postion_10x.json  btc_usdt_long_config.json  btc_usdt_short_config.json
Trading_BOT/src/: __init__.py  cli.py  exchange_gateio.py  liquidation.py
Trading_BOT/src/trading_bot/: __init__.py  cli.py  config.py  exchange_gateio.py  liquidation.py  prices.py
Trading_BOT/tests/: smoke_test.py  test.py
configs/strategy/: ma_cross.yaml
src/backtest/: engine.py  run_backtest.py
src/ingest/: check_integrity.py  compact_time_axis.py  fetch_1m.py  patch_missing_gaps.py
src/native_ext/: backtest_core.c  pyproject.toml  setup.py
src/native_ext/btcore.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/trading_bot/: native.py
